--- a/notebooks/schwingungen.ipynb
+++ b/notebooks/schwingungen.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/Schwingungsversuch.txt', sep='\\t', decimal=',')\n",
+    "df = pd.read_csv('../data/schwingungen.txt', sep='\\t', decimal=',')\n",
     "df = df.set_index('Frequenz (Hz)')\n",
     "df.head()"
    ]
@@ -44,15 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# mit .loc[] Auswahl des Wertebereichs\n",
     "df.loc[400:2000].plot(figsize=(14,2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
