--- a/notebooks/sonne.ipynb
+++ b/notebooks/sonne.ipynb
@@ -12,8 +12,9 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%matplotlib inline\n",
-    "plt.style.use('seaborn-dark')  ## verschiedene Plot-Style als Voreinstellung verfügbar"
+    "import scipy.optimize as opt\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -22,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(plt.style.available)"
+    "df = pd.read_excel('../data/sonne.xlsx')\n",
+    "df"
    ]
   },
   {
@@ -31,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../data/solarzelle.xlsx', index_col='Uhrzeit')"
+    "df.plot(marker='o')"
    ]
   },
   {
@@ -40,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "tag = df['Tag'].values\n",
+    "phi = df['phi'].values"
    ]
   },
   {
@@ -49,7 +52,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns"
+    "tag, phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear(x, a, b):\n",
+    "    return a + b * x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params, cov = opt.curve_fit(linear, tag, phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params"
    ]
   },
   {
@@ -60,12 +91,23 @@
    },
    "outputs": [],
    "source": [
-    "df[['P (in mW)']].plot(title='Tagesleistungsverlauf', marker='o', figsize=(10, 6), linewidth=1, linestyle='dashed')\n",
-    "plt.grid()\n",
-    "plt.xlabel('Uhrzeit')\n",
-    "plt.ylabel('P (in mW)')\n",
-    "plt.xticks(np.arange(0, 24, 1));"
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(tag, phi, marker='+', linewidth=0)\n",
+    "plt.plot(tag, linear(tag, *params))\n",
+    "plt.xlabel('t/Tagen')\n",
+    "plt.ylabel('$\\phi$')\n",
+    "plt.title('Fleck A, $\\phi$-t-Diagramm')\n",
+    "plt.annotate(f'$\\phi(t) = {params[0]:.3f} + {params[1]:.3f} * t$', xy=(1, 1.8));\n",
+    "plt.savefig('fleck_a_phi_t_diagramm.pdf')\n",
+    "plt.savefig('fleck_a_phi_t_diagramm.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
