--- a/notebooks/python-data.ipynb
+++ b/notebooks/python-data.ipynb
@@ -142,84 +142,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1</td>\n",
+       "      <th>48</th>\n",
+       "      <td>5.3</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>141</th>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.1</td>\n",
        "      <td>5.1</td>\n",
-       "      <td>1.8</td>\n",
+       "      <td>2.3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>4.4</td>\n",
+       "      <th>88</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.1</td>\n",
        "      <td>1.3</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>2</td>\n",
+       "      <th>18</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>6.6</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>5</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.3</td>\n",
+       "      <th>93</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.2</td>\n",
+       "      <th>26</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -227,28 +227,28 @@
       ],
       "text/plain": [
        "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "95                 5.7               3.0                4.2               1.2   \n",
-       "149                5.9               3.0                5.1               1.8   \n",
-       "87                 6.3               2.3                4.4               1.3   \n",
-       "145                6.7               3.0                5.2               2.3   \n",
-       "127                6.1               3.0                4.9               1.8   \n",
-       "60                 5.0               2.0                3.5               1.0   \n",
-       "75                 6.6               3.0                4.4               1.4   \n",
-       "21                 5.1               3.7                1.5               0.4   \n",
-       "55                 5.7               2.8                4.5               1.3   \n",
-       "14                 5.8               4.0                1.2               0.2   \n",
+       "48                 5.3               3.7                1.5               0.2   \n",
+       "141                6.9               3.1                5.1               2.3   \n",
+       "88                 5.6               3.0                4.1               1.3   \n",
+       "18                 5.7               3.8                1.7               0.3   \n",
+       "5                  5.4               3.9                1.7               0.4   \n",
+       "93                 5.0               2.3                3.3               1.0   \n",
+       "26                 5.0               3.4                1.6               0.4   \n",
+       "0                  5.1               3.5                1.4               0.2   \n",
+       "111                6.4               2.7                5.3               1.9   \n",
+       "65                 6.7               3.1                4.4               1.4   \n",
        "\n",
        "     target  \n",
-       "95        1  \n",
-       "149       2  \n",
-       "87        1  \n",
-       "145       2  \n",
-       "127       2  \n",
-       "60        1  \n",
-       "75        1  \n",
-       "21        0  \n",
-       "55        1  \n",
-       "14        0  "
+       "48        0  \n",
+       "141       2  \n",
+       "88        1  \n",
+       "18        0  \n",
+       "5         0  \n",
+       "93        1  \n",
+       "26        0  \n",
+       "0         0  \n",
+       "111       2  \n",
+       "65        1  "
       ]
      },
      "execution_count": 8,
@@ -401,7 +401,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11231c668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1150d64a8>"
       ]
      },
      "execution_count": 10,
@@ -433,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11241ba20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1151d9080>"
       ]
      },
      "execution_count": 11,
@@ -465,7 +465,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1146dd668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1174ff550>"
       ]
      },
      "execution_count": 12,
@@ -513,16 +513,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ccauet/anaconda3/envs/py3/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
+      "/Users/ccauet/anaconda3/envs/py3/lib/python3.6/site-packages/statsmodels/nonparametric/kde.py:488: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  binned = fast_linbin(X, a, b, gridsize) / (delta * nobs)\n",
+      "/Users/ccauet/anaconda3/envs/py3/lib/python3.6/site-packages/statsmodels/nonparametric/kdetools.py:34: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  FAC1 = 2*(np.pi*bw/RANGE)**2\n",
+      "/Users/ccauet/anaconda3/envs/py3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:83: RuntimeWarning: invalid value encountered in reduce\n",
+      "  return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1158f6d30>"
+       "<seaborn.axisgrid.PairGrid at 0x1175a1438>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
